--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emailjs-com": "^3.2.0",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2"
   }
 }
